Fixed Google login button, added shorter logout and login status check functions for Facebook and Google, formatted/organized code with Ctrl-Shift-F.

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -2,68 +2,73 @@
 
 /* Banner */
 .banner {
-    display: block;
-    width: 100%;
-    height: 100px;
+	display: block;
+	width: 100%;
+	height: 100px;
 	background-image: url("banner.svg");
-    /*background-color: #999999;*/
-    max-width: 62.5rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+	/*background-color: #999999;*/
+	max-width: 62.5rem;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 /* Codearea */
 #codearea {
-    height: 200px;
+	height: 200px;
 }
 
-a#signup{
-    background-color: #FF8500;
+a#signup {
+	background-color: #FF8500;
 }
 
-a#signup:hover{
-    background-color: #FF7800;
+a#signup:hover {
+	background-color: #FF7800;
 }
 
-h5#cAccount{
-    color: #008cba;
+h5#cAccount {
+	color: #008cba;
 }
 
-select.selector{
-    color: rgba(0, 0, 0, 0.75);
+select.selector {
+	color: rgba(0, 0, 0, 0.75);
 }
 
-div.login{
-    padding: 1.5em;
-    visibility: hidden;
-    border-style: solid;
-    position: absolute;
-    top: 45px;
-    right: 0px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    background-color: #FFF;
-    z-index: 1;
+div.login {
+	padding: 1.5em;
+	display: none;
+	border-style: solid;
+	position: absolute;
+	top: 45px;
+	right: 0px;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+	background-color: #FFF;
+	z-index: 1;
 }
 
-button#loginarea{
-    padding: 0.5em;
-    padding-left: 1em;
-    padding-right: 1em;
-    margin: 0em;
-    float: right;
+button#loginarea {
+	padding: 0.5em;
+	padding-left: 1em;
+	padding-right: 1em;
+	margin: 0em;
+	float: right;
 }
 
 div.fb-login-button {
-	display:none;
+	display: none;
 }
 
 iframe {
-	margin-top: 20px;
+	margin-top: 5px;
 	position: relative;
 	width: 80px;
 	height: 30px;
-	overflow: hidden; 
+	overflow: hidden;
 	text-align: left;
+}
+
+#g-signin-button {
+	margin-left: 15px;
+	display: none;
 }
